# ble2ws

./: MANIFEST.in  README.md  pyproject.toml
src/ble2ws/: __main__.py  index.html  jsonify.py  manager.py  server.py
